Fix formatting and add missing dependencies

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://money_wise:12345@localhost:5432/money_wise?schema=public"
+
+PRIVATE_KEY="FJjbqqYmbvQY01q2ydtd33X2yECHtREi";
