--- a/.env
+++ b/.env
@@ -6,5 +6,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://money_wise:12345@localhost:5432/money_wise?schema=public"
-
-PRIVATE_KEY="FJjbqqYmbvQY01q2ydtd33X2yECHtREi";
+JWT_SECRET="FJjbqqYmbvQY01q2ydtd33X2yECHtREi"
